[package]
name = "masonry_baseview"
version = "0.1.0"
edition = "2021"
authors = ["Jacek Wisniowski"]
license = "Apache-2.0"
description = "Baseview backend for Masonry/Xilem - the goal is to enable Xilem UIs in audio plugins"
repository = "https://github.com/baltobor/masonry_baseview.git"
keywords = ["gui", "audio", "plugin", "vst", "clap"]
categories = ["gui", "multimedia::audio"]
readme = "README.md"

[dependencies]
# Masonry core for widgets and rendering
masonry = "0.4"

# Baseview for plugin windowing
baseview = { git = "https://github.com/RustAudio/baseview", rev = "237d323c729f3aa99476ba3efa50129c5e86cad3" }

# GPU rendering - use vello's re-exported wgpu to avoid version conflicts
vello = "0.6"

# Raw window handle - use 0.5 for baseview compatibility
raw-window-handle = "0.5"

# Keyboard handling - use same version as baseview
keyboard-types = "0.6"

# Logging
tracing = "0.1"

# DPI handling
dpi = "0.1"

[dependencies.pollster]
version = "0.4"

[dev-dependencies]
tracing-subscriber = "0.3"

[[example]]
name = "hello"
path = "examples/hello.rs"
